# NNetnav

./: get_performance.py  pyproject.toml
finetuning/open_instruct/: finetune.py
scripts/: convert_to_sft.py
src/: run_agent.py  run_visual_reward_model.py
src/agent/: __init__.py  agentlab_agent.py
src/agent/prompts/: prompt_constructor.py
src/browser_env/: __init__.py  actions.py  helper_functions.py
src/nnetnav_registry/: __init__.py
